syntax = "proto3";

package io.as.loanproc.action;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

import "io/as/loanproc/domain/loan_proc_domain.proto";

option java_outer_classname = "LoanProcEventingToAppHandler";

service LoanProcEventingToApp {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnApproved(domain.Approved) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "loanproc"
    };
  }
  rpc OnDeclined(domain.Declined) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "loanproc"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "loanproc"
    };
  }
}